--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/william-rosado-912731244/">LinkedIn</a>
         <a class="footer-link" href="https://www.instagram.com/william417/">Instagram</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2022 William Rosado.</p>
+        <p class="copyright">© 2022 William Rosado.</p>
     </div>
 
 </body></html>
